--- a/src/index.css
+++ b/src/index.css
@@ -116,9 +116,11 @@ button {
 }
 
 img,
-svg {
+svg,
+video {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 /* ---------- Grain / noise overlay ---------- */
